# libOpenCL-loader

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  get-opencl-headers.sh  runtest.sh
android/: run.sh
android/jni/: Android.mk  Application.mk
include/: CL  cl_loader.h  opencl_loader.h
include/CL/: cl.h  cl.hpp  cl_d3d10.h  cl_d3d11.h  cl_dx9_media_sharing.h  cl_egl.h  cl_ext.h  cl_gl.h
lib/: libcl_loader.so.1  libcl_loader.so.1.0.0
projects/android/jni/: Android.mk
projects/macos/: build.sh  clean.sh  runtest.sh
src/: CMakeLists.txt  cl_loader.c  opencl_header_private.h  opencl_loader.cpp
test/: CMakeLists.txt  clinfo.cpp  test_cl_h.cpp  test_cl_hpp.cpp
